# eden_comfy_pipelines

./: .gitignore  README.md  __init__.py  general_utils.py  pyproject.toml  requirements.txt  test_animation_fix.py  test_maskfromrgb_kmeans.py  workflow-AspectPadImageForOutpainting.json
animation_scripts/: create_animation.py
clip_utils/: __init__.py  clip_interrogator.py  clip_tools.py
eden_utils/: lora_utils.py
example_workflows/: Thumbs.db  animate_3D.json  audio_split_stems.json  background_removal.json  background_removal_video.json  face-expression-transfer_HelloMeme_image.json  face-expression-transfer_HelloMeme_video.json  face_styler.json  flux_dev.json  flux_inpainting.json  flux_redux.json  flux_schnell_fp8.json  frame-blend-time-remapping.json  img2vid.json  layer_diffusion.json  mars-id.json  mochi_preview.json  ominicontrol.json  outpaint.json  remix_flux_schnell.json  seamless-texture-generator.json  stable_audio.json  texture_flow.json  txt2img_SDXL.json  txt2vid.json  upscaler.json  vid2vid_sdxl.json  video_FX.json  video_upscaler.json  workflow_test_audio_separator.json
img_utils/: animation.py  clustering.py  depth_nodes.py  depth_segmentation.py  gpt_nodes.py  hist_matcher.py  img_nodes.py  img_utils.py  organic_fill_nodes.py  projection_nodes.py  test (copy).py  test.py
ip_adapter_utils/: encode_folder.json  exploration_state.py  iterative_sampling_workflow.json  moodboard_workflow.json  moodmix.json  moodmix_utils.py  random_rotate.py
js/: eden_number_display.js
logic/: logic_nodes.py
pipelines/: comfy_img2vid.json  comfy_txt2vid.json  comfy_upscale.json  comfy_vid2vid.json  txt2vid_stylized.json  upscale_video.json
shape_filling_utils/: fill_polygon.py  make_border.py  many_fill_polygon.py
video_utils/: ORGANIC_FILL_FIXES.md  fill_image_mask.py  fill_utils.py  gradient_mask_video.py  mask_workflow.json  test_organic_fill.py  video_interpolation.py
