[project]
name = "eden_comfy_pipelines"
description = "A collection of custom nodes and workflows for ComfyUI, developed by https://www.eden.art/"
version = "1.2.1"
license = {file = "LICENSE"}
dependencies = [
    clip-interrogator==0.6.0
"open_clip_torch==2.26.1",
"openai",
"python-dotenv",
"scikit-learn",
"transformers",
"matplotlib",
"scikit-image",
"opencv-python"
    "opencv-python",
    "piexif",
    "py7zr",
    "lpips",
    "tsp_solver2",
    "einops",
]

[project.urls]
Repository = "https://github.com/edenartlab/eden_comfy_pipelines"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "edenartlab"
DisplayName = "Eden Comfy Pack"
Icon = "🌱🌱"
